korrektur fast fertig labels spielen verrueckt

--- a/lit.bib
+++ b/lit.bib
@@ -163,3 +163,24 @@ url = "http://www.sciencedirect.com/science/article/pii/S037026931001333X"
   url = "https://fias.frankfurtium.de/downloads/04_hqm_cb.pdf",
   urldate = "2020-08-09"
 }
+@online{bdt,
+  author = "Y. Freund, R. E. Schapire",
+  title = "A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting",
+  url = "https://doi.org/10.1006/jcss.1997.1504",
+  urldate = "2020-08-14"
+}
+semilep
+@article{semilep,
+    author = "Beaujean, Frederik and Bobeth, Christoph and van Dyk, Danny",
+    title = "{Comprehensive Bayesian analysis of rare (semi)leptonic and radiative $B$ decays}",
+    eprint = "1310.2478",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "EOS-2013-01, SI-HEP-2013-10, QFET-2013-07, FLAVOUR(267104)-ERC-56",
+    doi = "10.1140/epjc/s10052-014-2897-0",
+    journal = "Eur. Phys. J. C",
+    volume = "74",
+    pages = "2897",
+    year = "2014",
+    note = "[Erratum: Eur.Phys.J.C 74, 3179 (2014)]"
+}
